# Poi-Scrapper

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  Makefile  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.windsurf/plans/: poiscrapper-v3-build-plan-869cf4.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py  script.py.mako
apps/api/alembic/versions/: 20260509_0000_initial_schema.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/api/: __init__.py  exports.py  health.py  jobs.py  records.py  router.py  ws.py
apps/api/app/core/: __init__.py  config.py  ids.py  logging.py
apps/api/app/db/: __init__.py  base.py  models.py  session.py
apps/api/app/schemas/: __init__.py  common.py  intent.py  jobs.py  records.py
apps/api/app/services/: __init__.py  intent_parser.py  intent_parser_llm.py  job_events.py  source_discovery.py  source_persistence.py
apps/api/app/services/export/: __init__.py  csv.py
apps/api/app/services/llm/: __init__.py  base.py  factory.py  fallback_provider.py  gemini_provider.py  openrouter_provider.py
apps/api/app/services/scraper/: __init__.py  base.py  dispatcher.py  headless.py  robots.py  runner.py  static_html.py
apps/api/app/tasks/: scrape.py  source_discovery.py
apps/api/scripts/: smoke_llm.py
apps/api/tests/: conftest.py  test_intent_parser.py  test_intent_parser_llm.py  test_jobs_api.py  test_llm_fallback.py  test_llm_gemini_schema.py  test_smoke.py  test_static_html_scraper.py
apps/web/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: health-banner.tsx  health-pill.tsx  job-history-sidebar.tsx  job-shell.tsx
apps/web/src/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx
apps/web/src/components/preview/: plan-editor.tsx  plan-preview.tsx  preview-panel.tsx  records-preview.tsx  source-progress-badge.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  select.tsx  textarea.tsx
apps/web/src/hooks/: use-job-events.ts  use-jobs.ts  use-records.ts
apps/web/src/lib/: api.ts  env.ts  utils.ts
